vlib/v/checker/tests/struct_field_init_with_result_err.vv
fn example() !int {
	return 0
}

struct Example {
	example int
}

fn main() {
	println(Example{example()})
}
